# banco-dados-vetorial

./: .dockerignore  .env.example  .gitignore  Dockerfile.jupyter  Dockerfile.ollama  OLLAMA_SETUP.md  QUICKSTART_OLLAMA.md  README.md  docker-compose-cpu.yaml  docker-compose.yaml  manage-ollama.ps1  pyproject.toml  requirements-jupyter.txt  requirements.txt
data/: init-db.sql
data/embeddings/: comparative_results.csv  ollama_comparative_results.csv
data/faiss_indices/: exemplo_similaridade.index  exemplo_similaridade_metadata.pkl
data/meu_indice_faiss/: index.faiss  index.pkl
data/meu_indice_faiss_ollama/: index.faiss  index.pkl
src/1_fundamentos/: espaco_3d.ipynb  lab_1.0_similaridade_cosseno.ipynb  lab_1.1_espaços.ipynb  lab_1.1_matrioska.ipynb  lab_1.1_matrioska_tradeoff.ipynb  lab_1.2_comparativos.ipynb  lab_1.2_similaridade_cosseno.ipynb  lab_1.3_comparativos_ollama.ipynb  lab_1.3_matrioska.ipynb  lab_1.4_buscas_nuvem.ipynb  lab_1.4_comparativos.ipynb  lab_1.5_buscas_local.ipynb  lab_1.5_comparativos_ollama.ipynb  lab_1.6_buscas_local_comparativo.ipynb  lab_1.7_mini_rag.ipynb  lab_1.ipynb
src/2_buscas/: lab_2.1_buscas_nuvem.ipynb  lab_2.2_buscas_local.ipynb  lab_2.3_buscas_local_comparativo.ipynb
src/2_performance/: lab_2.1.ipynb  lab_2.2.ipynb  lab_2_0_ollama.ipynb
src/3_rag/: lab_3.1_mini_rag.ipynb  lab_3.2_mini_rag_ollama.ipynb
src/3_rag_persistencia/: lab_3.1_mini_rag.ipynb  lab_3.1_persistencia_nuvem.ipynb  lab_3.2_mini_rag_ollama.ipynb  lab_3.2_persistencia_ollama.ipynb  (+8 more)
tests/: test_integration.py  test_ollama_models.py
(+1 files in other folders)
