[project]
name = "11-34-engenharia-vetorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-qdrant>=1.1.0",
    "lark>=1.3.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "tiktoken>=0.12.0",
]
